<resources>
    <string name="app_name">Cards Scoring</string>
    <string name="action_reset">New Game</string>
    <string name="likhaGameTitle">Likha - ليخة</string>
    <string name="tarneebGameTitle">Tarneeb - طرنيب</string>
    <string name="p1Name">P1</string>
    <string name="p2Name">P2</string>
    <string name="p3Name">P3</string>
    <string name="p4Name">P4</string>
    <string name="startBtn">Start</string>
    <string name="submitBtn">Submit</string>
    <string name="new_gameBtn">New Game</string>
    <string name="deal_left">Deal Left</string>
    <string name="deal_right">Deal Right</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


</resources>
